--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     font-family: Inter;
     src: url(fonts/Inter-VariableFont_slnt\,wght.ttf);
 }
+
 * {
     font-family: Inter;
     color: #E4E5EA;
@@ -19,7 +20,6 @@ body {
         'menu menu menu'
         'footer footer footer';
     background: #0E1014;
-    
     column-gap: 1%;
     row-gap: 1em;
 }
@@ -46,29 +46,33 @@ main {
 
 footer {
     grid-column: 1 / 12;
-
 }
+
 .footer__wrapper {
     display: flex;
     justify-content: space-between;
 }
+
 menu {
     width: 100%;
     grid-area: menu;
     display: inline-flex;
-    align-items: center;
-    margin: 0;
+    margin: 3px 0 0 0;
     padding: 0;
     flex-wrap: wrap;
 }
+
 menu > * {
     padding: 0 1em;
     font-size: 16px;
 }
+
 .header__contacts {
     grid-area: contacts;
-    align-self: center;
+    /* align-self: center; */
+    margin-top: 3px;
 }
+
 .header__contacts > * {
     padding-left: 0.8em;
 }
@@ -78,13 +82,12 @@ menu > * {
 }
 
 .header__logo_description {
-    grid-area: logo_description;
     font-size: 10px;
 }
 
 .header__phone {
     grid-area: phone;
-    align-self: center;
+    margin-top: 3px;
     font-size: 16px;
 }
 
@@ -148,9 +151,11 @@ h2, h2 > * {
     justify-items: self-end;
     text-align: right;
 }
+
 .advantages_mobile {
     display: none;
 }
+
 .main__button {
     padding: 20px 35px;
     background: #4077F3;
@@ -192,7 +197,6 @@ h2, h2 > * {
     box-shadow: 3px 6px 27px -10px #B176D940;
     filter: blur(5px);
     backdrop-filter: blur(2px);
-
     grid-area: 1 / 8 / 2 / 9;
 }
 
@@ -226,7 +230,6 @@ h2, h2 > * {
     opacity: 0.5;
     filter: blur(196px);
     margin: -180px -80px;
-
 }
 
 .purple-shadow {
@@ -236,7 +239,6 @@ h2, h2 > * {
     background: #833AB4;
     opacity: 0.5;
     filter: blur(196px);
-
     grid-area: 1 / 2 / 1 / 4;
 }
 
@@ -259,7 +261,6 @@ h2, h2 > * {
     text-transform: uppercase;
 }
 
-
 @media (max-width: 768px) {
     body {
         width: auto;
@@ -267,9 +268,11 @@ h2, h2 > * {
         row-gap: 0;
         column-gap: 0;
     }
+
     h1, h1 > * {
         font-size: 36px;
     }
+
     .advantages,
     .header__logo,
     .header__phone,
@@ -280,23 +283,30 @@ h2, h2 > * {
 
     menu { 
         overflow-x: scroll;
+        overflow-y: hidden;
         flex-wrap: nowrap;
+        align-items: center;
         padding: 1.5em 0;
         grid-column: 1 / 13;
     }
+
     menu > * {
         padding: 0 14px;
     }
+
     menu:last-child {
         padding: 0;
     }
+
     menu::-webkit-scrollbar {
         width: 0px;
     }
+
     .purple-shadow {
         grid-area: 2/ 6 /3 / 12;
         margin: 80px 0;
     }
+
     .red-shadow {
         width: 312px;
         height: 312px;
@@ -305,14 +315,16 @@ h2, h2 > * {
         opacity: 0.5;
         filter: blur(196px);
         margin: -180px 0px;
-    
     }
+
     .footer__wrapper {
         flex-direction: column;
     }
+
     .main__button {
         display: none;
     }
+
     .sphere-brown-small {
         align-self: self-end;
         grid-area: 2 / 1 /3 / 2;
@@ -321,6 +333,7 @@ h2, h2 > * {
         height: 44px;
         border-radius: 22px;
     }
+
     .sphere-brown {
         display: none;
     }
@@ -343,11 +356,9 @@ h2, h2 > * {
         margin: 0 0;
         padding: 3em 1em;
         overflow: hidden;
-
         grid-area: 2/ 1 /3 / 12;
-
-
     }
+
     main::before {    
         content: "";
         background-image: url(./images/fon.png);
@@ -359,23 +370,28 @@ h2, h2 > * {
         left: 0px;
         opacity: 0.15;
     }
+
     .main__right {
         grid-column: 1 / 12;
         justify-items: self-start;
         text-align: left;
         margin-top: 40px;
     }
+
     .right {
         
         align-items: self-start;
     }
+
     .security-policy > * {
         text-align: left;
         align-items: self-start;
     }
+
     footer {
         padding: 14px;
     }
+
     .footer__chapter {
         margin: 14px 0;
     }
